Roster add people to bosses, not completed yet

--- a/todo.txt
+++ b/todo.txt
@@ -9,3 +9,7 @@
 - pokazanie braku bufów klasowych (pod nazwą bosa x lub v, hover i pokazuje czego nie masz)
 - listy osób na bosie i osób dostępnych
 - zliczanie vaulta
+
+
+Filipek:
+WYPIERDOLIC ROSTER/TEMPLATES/BOSSES_SELECTION useless imo
